liblscp - LinuxSampler Control Protocol API
-------------------------------------------

ChangeLog

0.5.3  2007-01-15  Added new client interface functions, for sampler
                   channel effect sends control:
                     lscp_set_fxsend_midi_controller();
                     lscp_set_fxsend_level();

                   Added new field member to lscp_fxsend_info_t (level).

0.5.2  2007-01-11  Added new client interface functions, for sampler
                   channel effect sends control:
                     lscp_create_fxsend();
                     lscp_destroy_fxsend();
                     lscp_get_fxsends();
                     lscp_list_fxsends();
                     lscp_get_fxsend_info();
                     lscp_set_fxsend_audio_channel();
				   and for global volume:
                     lscp_get_volume();
                     lscp_set_volume();

                   Audio routing representation changed to integer array.

0.5.1  2006-12-22  Added support for new (un)subscribable events:
                     LSCP_EVENT_AUDIO_OUTPUT_DEVICE_COUNT,
                     LSCP_EVENT_AUDIO_OUTPUT_DEVICE_INFO,
                     LSCP_EVENT_MIDI_INPUT_DEVICE_COUNT,
                     LSCP_EVENT_MIDI_INPUT_DEVICE_INFO,
                     LSCP_EVENT_MIDI_INSTRUMENT_MAP_COUNT,
                     LSCP_EVENT_MIDI_INSTRUMENT_MAP_INFO,
                     LSCP_EVENT_MIDI_INSTRUMENT_COUNT,
                     LSCP_EVENT_MIDI_INSTRUMENT_INFO.
 
                   Updated examples.

0.5.0  2006-12-17  MIDI instrument mapping, second round, according to
                   LSCP 1.2 draft document as of December 15, 2006.

                   New client interface functions:
                     lscp_set_channel_midi_map();
                     lscp_add_midi_instrument_map();
                     lscp_remove_midi_instrument_map();
                     lscp_get_midi_instrument_maps();
                     lscp_list_midi_instrument_maps();